attached_assets/Pasted-Filter-and-search-logs-You-reached-the-start-of-the-range-Nov-2-2025-1-27-AM-Starting-Container-n-1762027202020_1762027202022.txt
Filter and search logs

You reached the start of the range
Nov 2, 2025, 1:27 AM
Starting Container
npm warn config production Use `--omit=dev` instead.
> rest-express@1.0.0 start
> NODE_ENV=production node dist/index.js
file:///app/dist/index.js:66
import { Pool as PgPool } from "pg";
         ^^^^
SyntaxError: Named export 'Pool' not found. The requested module 'pg' is a CommonJS module, which may not support all module.exports as named exports.
CommonJS modules can always be imported via the default export, for example using:
import pkg from 'pg';
const { Pool: PgPool } = pkg;
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:123:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:191:5)
    at async ModuleLoader.import (node:internal/modules/esm/loader:337:24)
    at async loadESM (node:internal/process/esm_loader:34:7)
    at async handleMainPromise (node:internal/modules/run_main:106:12)
Node.js v18.20.5
npm warn config production Use `--omit=dev` instead.
> rest-express@1.0.0 start
> NODE_ENV=production node dist/index.js
file:///app/dist/index.js:66
import { Pool as PgPool } from "pg";
         ^^^^
SyntaxError: Named export 'Pool' not found. The requested module 'pg' is a CommonJS module, which may not support all module.exports as named exports.
CommonJS modules can always be imported via the default export, for example using:
import pkg from 'pg';
const { Pool: PgPool } = pkg;
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:123:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:191:5)
    at async ModuleLoader.import (node:internal/modules/esm/loader:337:24)
    at async loadESM (node:internal/process/esm_loader:34:7)
    at async handleMainPromise (node:internal/modules/run_main:106:12)
Node.js v18.20.5
npm warn config production Use `--omit=dev` instead.
> rest-express@1.0.0 start
> NODE_ENV=production node dist/index.js
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:123:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:191:5)
    at async ModuleLoader.import (node:internal/modules/esm/loader:337:24)
    at async loadESM (node:internal/process/esm_loader:34:7)
    at async handleMainPromise (node:internal/modules/run_main:106:12)
file:///app/dist/index.js:66
import { Pool as PgPool } from "pg";
Node.js v18.20.5
         ^^^^
SyntaxError: Named export 'Pool' not found. The requested module 'pg' is a CommonJS module, which may not support all module.exports as named exports.
CommonJS modules can always be imported via the default export, for example using:
import pkg from 'pg';
const { Pool: PgPool } = pkg;
npm warn config production Use `--omit=dev` instead.
> rest-express@1.0.0 start
> NODE_ENV=production node dist/index.js
file:///app/dist/index.js:66
import { Pool as PgPool } from "pg";
         ^^^^
SyntaxError: Named export 'Pool' not found. The requested module 'pg' is a CommonJS module, which may not support all module.exports as named exports.
CommonJS modules can always be imported via the default export, for example using:
import pkg from 'pg';
const { Pool: PgPool } = pkg;
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:123:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:191:5)
    at async ModuleLoader.import (node:internal/modules/esm/loader:337:24)
    at async loadESM (node:internal/process/esm_loader:34:7)
    at async handleMainPromise (node:internal/modules/run_main:106:12)
Node.js v18.20.5
npm warn config production Use `--omit=dev` instead.
> rest-express@1.0.0 start
> NODE_ENV=production node dist/index.js
file:///app/dist/index.js:66
import { Pool as PgPool } from "pg";
         ^^^^
SyntaxError: Named export 'Pool' not found. The requested module 'pg' is a CommonJS module, which may not support all module.exports as named exports.
CommonJS modules can always be imported via the default export, for example using:
import pkg from 'pg';
const { Pool: PgPool } = pkg;
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:123:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:191:5)
    at async ModuleLoader.import (node:internal/modules/esm/loader:337:24)
    at async loadESM (node:internal/process/esm_loader:34:7)
    at async handleMainPromise (node:internal/modules/run_main:106:12)
Node.js v18.20.5
npm warn config production Use `--omit=dev` instead.
> rest-express@1.0.0 start
> NODE_ENV=production node dist/index.js
file:///app/dist/index.js:66
import { Pool as PgPool } from "pg";
         ^^^^
SyntaxError: Named export 'Pool' not found. The requested module 'pg' is a CommonJS module, which may not support all module.exports as named exports.
CommonJS modules can always be imported via the default export, for example using:
import pkg from 'pg';
const { Pool: PgPool } = pkg;
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:123:21)